  * At long last, support for distributed-memory parallel machines
    with MPI.  The computation time and memory usage can often improve
    nearly linearly with the number of processors.

  * Added new material-function material type, so that you can now
    specify that the dielectric tensor be an arbitrary function of
    position.  Thanks to Peter Bermel for needing this.

  * If MPB is configured with the flag --with-hermitian-epsilon, then
    complex-hermitian dielectric tensors (corresponding to magnetic
    materials, which break time-reversal symmetry) are supported.
    Thanks to Shanhui Fan for pestering me about this.

  * Added new "nothing" material type that punches a hole through other
    objects to the background.  (This is distinct from default-material
    when epsilon-input-file is used, or for compute-energy-in-objects.)

  * Fixed inability of MPB 0.13 to run under an old version (1.2) of Guile.

  * Give error if k-point or dielectric tensor is incompatible with
    run-te/run-tm, or if the dielectric tensor is not positive-definite.

  * Default to vendor cc instead of gcc, so that C and Fortran compilers
    are in sync.  (We default to the vendor f77 because it was
    probably used to compile LAPACK/BLAS, and Fortran libraries are picky.)

  * Manual now cites our recent publication on the methods behind MPB.

  * Bug fix in compute-energy-in-object-list for non-orthogonal lattices.

MPB 0.13 (1/7/2001)

  * Can now take advantage of inversion symmetry in the geometry, gaining
    at least a factor of two in speed and a factor of two in memory.
    To use this, you configure MPB with --with-inv-symmetry; the resulting
    executable is installed as "mpbi" and only supports inversion symmetry,
    so you will usually want to install the ordinary MPB as well.

  * Added new eigensolver-block-size input variable, so that MPB can
    optionally solve for only a few bands at a time instead of all