@@ -226,6 +226,9 @@ MPI support (<code>--with-mpi</code>), it installs itself as
 href="user-ref.html#parallel">user reference</a> section for
 information on using MPB on parallel machines.
 
+<p>MPI support in MPB is thanks to generous support from <a
+href="http://www.clarendonphotonics.com/">Clarendon Photonics</a>.
+
 <h2><a name="hdf5">HDF5</a> <i>(optional, strongly advised)</i></h2>
 
 <p>We require a portable, standard binary format for outputting the
