@@ -1103,6 +1103,9 @@ parallelization.  Moreover, memory usage per processor is inversely
 proportional to the number of processors used.  For sufficiently large
 problems, the speedup is also nearly linear.
 
+<p>MPI support in MPB is thanks to generous support from <a
+href="http://www.clarendonphotonics.com/">Clarendon Photonics</a>.
+
 <h3>Alternative parallelization</h3>
 
 <p>There is an alternative method of parallelization when you have
