@@ -1,6 +1,7 @@
   * At long last, support for distributed-memory parallel machines
     with MPI.  The computation time and memory usage can often improve
-    nearly linearly with the number of processors.
+    nearly linearly with the number of processors.  Thanks to
+    Clarendon Photonics for funding this work.
 
   * Added new material-function material type, so that you can now
     specify that the dielectric tensor be an arbitrary function of
